--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
    <title>Super Mario</title>
    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
    <meta name="viewport" content="width=device-width" initial-scale=1.0>
+   <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(94746899, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/94746899" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
    <!-- изображение Марио, отображается перед названием страницы вверху вкладки браузера -->
    <link rel="icon" href="https://w7.pngwing.com/pngs/356/116/png-transparent-check-mark-favicon-green-checkbox-s-text-heart-copyright.png" type="image/png"> 
    <!-- подключение файла стилей, который убирает настройки браузера для одинакового отображения страницы во всех браузерах -->
